--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,14 @@
   <div id="nav-left">
     <p id="title">Sketch Canvas</p> 
   </div> 
+
   <div id="nav-middle">
-    <!-- <a href="interpolation.html" class="menu-item menu-hover">&lt;</a> -->
-      <p>&lt; Prediction &gt;</p>
-    <!-- <a href="interpolation.html" class="menu-item menu-hover">&gt;</a> -->
-    
+    <br>
+    <span onclick="switchLeft()" style="cursor: pointer;">&lt;</span> 
+    <span id="option-name"> Prediction </span>
+    <span onclick="switchRight()" style="cursor: pointer;">&gt;</span> 
   </div> 
+
   <div id="nav-right">
     <a href="#top" class="menu-item menu-hover">
       <p>Home</p>
@@ -38,120 +40,162 @@
 </navigation>
 
 
+
 <div id="top"></div>
 <!-- MAIN CONTENT -->
 <body id="home" onload="init()" class="loading-cursorXXXXX">
+
   <div id="main-container">
     <div id="loading-div" class="loading-div">
-      <p id="test-text">.....</p>
-    </div>
-
-
-    <div id="canvas-container">
-      <div id="canvas-box">
-        <canvas id="myCanvas" class="canvas" width="336" height="336"></canvas>
-        <div id="button-box">
-          <button class="button" id="predictBtn" onclick="VAEpredict()">test btn</button>
-          <button class="button" id="predictBtn" onclick="randomSliders()">Predict</button>
-          <button class="button" id="clearBtn" onclick="erase()">Clear</button>
-          <!-- <button class="button" id="addBtn" onclick="addSketch()">Add</button> -->
-          <!-- <button class="button button3" id="clearallBtn" onclick="eraseAll()">Clear All</button> -->
-          <!-- <button class="button" id="saveBtn" onclick="savePNG()">download png</button> -->
-          <!-- <button class="button" id="saveBtn" onclick="saveRel()">download relVector</button> -->
-        </div>
-      </div>
-      
-      <div id="gap-box">
-        <p style="color:white; font-size: 33px;">
-          <!-- ⮕ <br><br><br><br><br>⮕ <br><br><br><br> -->
-        </p>
-      </div>
-      
-      <div id="plot-container">   
-        <!-- PARALLEL PLOT COORDINATES -->    
-        <!-- <div id="plot"></div>
-        
-        <style>
-          .axis {
-            opacity: 0.4;
-          }
-          .axis:hover {
-            opacity: 1;
-          }
-        </style> -->
-        <!-- INTERACTIVE PARALLEL PLOT COORDINATES -->      
-        <div id="plot2">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider1">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider2">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider3">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider4">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider5">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider6">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider7">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider8">
-          <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider9">
-          <div id="plot2-text">
-            <p id="sliderValue1" class="slider-text">0</p>
-            <p id="sliderValue2" class="slider-text">0</p>
-            <p id="sliderValue3" class="slider-text">0</p>
-            <p id="sliderValue4" class="slider-text">0</p>
-            <p id="sliderValue5" class="slider-text">0</p>
-            <p id="sliderValue6" class="slider-text">0</p>
-            <p id="sliderValue7" class="slider-text">0</p>
-            <p id="sliderValue8" class="slider-text">0</p>
-            <p id="sliderValue9" class="slider-text">0</p>
-          </div>           
-        </div>
-        <div id="button-box">
-          <button class="button" id="clearBtn" style="width: 168px;" onclick="sliderPredict()">Predict</button>
-          
-          
-          <button class="button" id="predictBtn" style="width: 168px;" onclick="resetSliders()">Reset</button>
-        </div>
-      </div>
-      
-      <div id="gap-box">
-        <p style="color:white; font-size: 33px;">
-          <!-- ⮕ <br><br><br><br> -->
-        </p>
-      </div>
-
-      <div id="canvas-box">
-        <canvas id="predCanvas" class="canvas" width="336" height="336"></canvas>
-        
-        <div id="button-box">
-          <p class="notbutton" style="width: 100%;">
-            <span style="color:black; font-weight: 600;">CNN: </span>
-            <span id="prediction" style="color:black; font-weight: 500; font-size: 20px;"> </span>
-          </p>
-        </div>
-      </div>
-  
-      <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.5.2/dist/tf.min.js"></script>
-      <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
-      <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+      <!-- <p id="test-text">.....</p> -->
     </div>
     
-    <div id="images-container">
-      <img id="saved0" class="saved">
-      <img id="saved1" class="saved">
-      <img id="saved2" class="saved">
-      <img id="saved3" class="saved">
-      <img id="saved4" class="saved">
-      <img id="saved5" class="saved">
-      <img id="saved6" class="saved">
-      <img id="saved7" class="saved">
-      <img id="saved8" class="saved">
-      <img id="saved9" class="saved">
-      <br>
-      <div style="margin-top:20px;">
-        <button class="button" id="saveBtn" onclick="savePNG()">Download Selected</button>
+    <!-- PANELS -->
+    <!-- <div id="option0" w3-include-HTML="/static/include/prediction.html" class="invisible-template visible-template"></div>
+    <div id="option1" w3-include-HTML="/static/include/interpolation.html" class="invisible-template"></div> -->
+    
+    <div id="option0" class="invisible-template visible-template">
+      <div id="canvas-container">
+        <!-- <p>prediction template</p> -->
+        <div id="canvas-box">
+            <canvas id="myCanvas" class="canvas" width="360" height="360"></canvas>
+            <div id="button-box">
+              <button class="button canvas-btn" id="predictBtn" onclick="VAEpredict()">Predict</button>
+              <button class="button canvas-btn" id="clearBtn" onclick="erase()">Clear</button>
+            </div>
+        </div>
+          
+        <div id="gap-box">
+            <p style="color:white; font-size: 33px;">
+              <!-- ⮕ <br><br><br><br><br>⮕ <br><br><br><br> -->
+            </p>
+        </div>
+          
+        <div id="plot-container">   
+            <!-- PARALLEL PLOT COORDINATES -->    
+            <div id="plot"></div>
+            
+            <style>
+              .axis {
+                opacity: 0.4;
+              }
+              .axis:hover {
+                opacity: 1;
+              }
+            </style>
+            <!-- INTERACTIVE PARALLEL PLOT COORDINATES -->      
+            <div id="plot2">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider1">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider2">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider3">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider4">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider5">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider6">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider7">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider8">
+              <input type="range" min="-2.000" max="2.000" value="0.000" step='.01' class="slider" id="slider9">
+              <div id="plot2-text">
+                <p id="sliderValue1" class="slider-text">0</p>
+                <p id="sliderValue2" class="slider-text">0</p>
+                <p id="sliderValue3" class="slider-text">0</p>
+                <p id="sliderValue4" class="slider-text">0</p>
+                <p id="sliderValue5" class="slider-text">0</p>
+                <p id="sliderValue6" class="slider-text">0</p>
+                <p id="sliderValue7" class="slider-text">0</p>
+                <p id="sliderValue8" class="slider-text">0</p>
+                <p id="sliderValue9" class="slider-text">0</p>
+              </div>           
+            </div>
+            <div id="button-box">
+              <button class="button" id="clearBtn" style="width: 168px;" onclick="sliderPredict()">Predict</button>
+                        
+              <button class="button" id="predictBtn" style="width: 168px;" onclick="resetSliders()">Reset</button>
+            </div>
+        </div>
+          
+        <div id="gap-box">
+            <p style="color:white; font-size: 33px;">
+              <!-- ⮕ <br><br><br><br> -->
+            </p>
+        </div>
+    
+        <div id="canvas-box">
+            <canvas id="predCanvas" class="canvas" width="360" height="360"></canvas>
+            <!-- <p id="cnn-text-main" class="cnn-text-main">0.00</p> -->
+    
+            <div id="button-box">
+              <p class="notbutton" style="width: 100%;">
+                <span style="color:rgba(255, 255, 255, 0); font-weight: 600;">. </span>
+                <!-- <span id="prediction" style="color:black; font-weight: 500; font-size: 20px;"> </span> -->
+              </p>
+            </div>
+        </div>
       </div>
     </div>
 
-  <img style="display: none" src="https://i.ya-webdesign.com/images/blank-png-1.png" width="224" height="224" id="predict-img" class="predict-img sketch-img"></img>
+    <div id="option1" class="invisible-template">       
+      <div id="canvas-container">
+        <!-- <p>INTERPOLATION template</p> -->
+        <div id="canvas-box">
+            <canvas id="myCanvas" class="canvas" width="360" height="360"></canvas>
+            <div id="button-box">
+              <button class="button canvas-btn" id="predictBtn" onclick="VAEpredict()">Interpolate</button>
+              <!-- <button class="button" id="predictBtn" onclick="randomSliders()">Predict</button> -->
+              <button class="button canvas-btn" id="clearBtn" onclick="erase()">Clear</button>
+              <!-- <button class="button" id="addBtn" onclick="addSketch()">Add</button> -->
+              <!-- <button class="button button3" id="clearallBtn" onclick="eraseAll()">Clear All</button> -->
+              <!-- <button class="button" id="saveBtn" onclick="savePNG()">download png</button> -->
+              <!-- <button class="button" id="saveBtn" onclick="saveRel()">download relVector</button> -->
+            </div>
+        </div>
+        
+        <div id="canvas-box">
+            <h3>INTERPOLATION AREA</h3>
+        </div>
+      </div>
+    </div>
+    
+    
+    <div id="images-container">
+        <div id="single-image-container">
+          <img id="saved0" class="saved activeSaved" onclick=activeSaved(0)>
+          <p id="saved-cnn0" class="cnn-text">0.00</p>
+        </div>
+        <div id="single-image-container">
+          <img id="saved1" class="saved" onclick=activeSaved(1)>
+          <p id="saved-cnn1" class="cnn-text">0.00</p>
+        </div>
+        <div id="single-image-container">
+          <img id="saved2" class="saved" onclick=activeSaved(2)>
+          <p id="saved-cnn2" class="cnn-text">0.00</p>
+        </div>
+        <div id="single-image-container">
+          <img id="saved3" class="saved" onclick=activeSaved(3)>
+          <p id="saved-cnn3" class="cnn-text">0.00</p>
+        </div>
+        <div id="single-image-container">
+          <img id="saved4" class="saved" onclick=activeSaved(4)>
+          <p id="saved-cnn4" class="cnn-text">0.00</p>
+        </div>
+        <div id="single-image-container">
+          <img id="saved5" class="saved" onclick=activeSaved(5)>
+          <p id="saved-cnn5" class="cnn-text">0.00</p>
+        </div>
 
+        <br>
+        <div style="margin-top:20px;">
+            <button class="button saving-btn" id="saveBtn" onclick="savePNG()">Download Selected</button>
+            <button class="button saving-btn" id="saveBtn" onclick="resetSaved()">Clear All</button>
+        </div>
+        <!-- <p id="cnn-values-test">[...]</p> -->
 
+    </div>
+
+    <!-- SCRIPTS -->
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/w3-include.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/switch.js') }}"></script>
   </div>
 
   <div id="main-text">
@@ -210,10 +254,11 @@
   </div>
   
   <!-- Load d3.js -->
-  <!-- <script src="https://d3js.org/d3.v4.js"></script> -->
-  <!-- <script src="{{ url_for('static', filename='js/parallel.js') }}"></script> -->
+  <script src="https://d3js.org/d3.v4.js"></script> 
+  <script src="{{ url_for('static', filename='js/parallel.js') }}"></script>
 
 
+  <script>w3.includeHTML();</script>
 </body>
 
 
