--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,6 +108,11 @@ h6{font-size:16px; color:var(--main-text-color);}
     margin: 20px 0;
     height: 366px;
 }
+#int-container {
+    text-align: center;
+    margin: 20px 0;
+    height: 200px;
+}
 #canvas-box, #gap-box {
     height: 100%;
     display: inline-block;
@@ -131,9 +136,16 @@ h6{font-size:16px; color:var(--main-text-color);}
     margin: 0;
     padding: 0;
 }
-#myCanvas {
+#myCanvas, #interpolationCanvas {
     background-color: var(--canvas-color);
 }
+#interpolationCanvas {
+    z-index: 5;
+}
+.int-canvas {
+    border: red 2px solid;
+}
+
 #predCanvas {    
     background-color: var(--canvas-color);
     /* vertical-align: top; */
@@ -151,6 +163,9 @@ h6{font-size:16px; color:var(--main-text-color);}
 }
 .invisible {
     display: none;
+}
+.visible-inline-block {
+    display: inline-block;
 }
 #button-box {
     display: block;
@@ -276,6 +291,9 @@ background-color: rgb(155, 155, 155);
 }
 .saved:hover {
     cursor: pointer;
+}
+.activeSavedint {
+    border: 5px solid rgb(236, 9, 47);
 }
 .activeSaved {
     outline: 2px solid var(--blue-color);
@@ -438,4 +456,20 @@ input {
     width: 100%;
     height: 300px;
     /* background-color: pink; */
+}
+#slideout {
+    background-color: salmon;
+    position: fixed;
+    left: 0;
+    top: 120px;
+    height: 400px;
+    width: 600px;
+    transition: .5s;
+    transform: translateX(-550px);
+    padding-left: 100px;
+}
+#slideout:hover {
+    transform: translateX(0px);
+    
+    width: 600px;
 }
