--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,9 @@
 
   <div id="main-container">
     <div id="loading-div" class="loading-div">
-      <!-- <p id="test-text">.....</p> -->
+      <!-- <p id="test-text">.. ...</p> -->
     </div>
+    
     
     <!-- PANELS -->
     <!-- <div id="option0" w3-include-HTML="/static/include/prediction.html" class="invisible-template visible-template"></div>
@@ -133,36 +134,49 @@
       </div>
     </div>
 
-    <div id="option1" class="invisible-template">       
-      <div id="canvas-container">
-        <!-- <p>INTERPOLATION template</p> -->
+    
+    <!-- INTERPOLATION PANEL -->
+    <div id="option1" class="invisible-template">    
+      <!-- <div id="slideout">
         <div id="canvas-box">
-            <canvas id="myCanvas" class="canvas" width="360" height="360"></canvas>
-            <div id="button-box">
-              <button class="button canvas-btn" id="predictBtn" onclick="VAEpredict()">Interpolate</button>
-              <!-- <button class="button" id="predictBtn" onclick="randomSliders()">Predict</button> -->
-              <button class="button canvas-btn" id="clearBtn" onclick="erase()">Clear</button>
-              <!-- <button class="button" id="addBtn" onclick="addSketch()">Add</button> -->
-              <!-- <button class="button button3" id="clearallBtn" onclick="eraseAll()">Clear All</button> -->
-              <!-- <button class="button" id="saveBtn" onclick="savePNG()">download png</button> -->
-              <!-- <button class="button" id="saveBtn" onclick="saveRel()">download relVector</button> -->
-            </div>
+          <canvas id="interpolationCanvas" class="canvas" width="360" height="360"></canvas>
+          <div id="button-box">
+            <button class="button canvas-btn" id="predictBtn" onclick="VAEpredict()">Predict</button>
+            <button class="button canvas-btn" id="clearBtn" onclick="erase()">Clear</button>
+          </div>
         </div>
-        
-        <div id="canvas-box">
-            <h3>INTERPOLATION AREA</h3>
+
+      </div> -->
+      
+      <div style="text-align: center;">   
+        <div id="int-container">           
+              <img id="int0" class="saved">
+              <img id="int1" class="saved">
+              <img id="int2" class="saved">
+              <img id="int3" class="saved invisible">
+              <img id="int4" class="saved invisible">
+              <img id="int5" class="saved invisible">
+              <img id="int6" class="saved invisible">
+              <img id="int7" class="saved invisible">
+              <img id="int8" class="saved invisible">
+
+              <canvas id="transferCanvas" class="canvas int-canvas" width="72" height="72" style="display: none;"></canvas>
         </div>
+      </div>
+      <div style="text-align: center;">   
+        <button class="button canvas-btn" id="" onclick="interpolationRequest()">interpolate</button><br><br>
+        <input type="range" min="1" max="4" value="3" step='1' class="" id="int-slider"><br>
+        <p id="intSliderValue" class="slider-text">3</p>
       </div>
     </div>
     
-    
     <div id="images-container">
         <div id="single-image-container">
-          <img id="saved0" class="saved activeSaved" onclick=activeSaved(0)>
+          <img id="saved0" class="saved activeSaved activeSavedint" onclick=activeSaved(0)>
           <p id="saved-cnn0" class="cnn-text">0.00</p>
         </div>
         <div id="single-image-container">
-          <img id="saved1" class="saved" onclick=activeSaved(1)>
+          <img id="saved1" class="saved activeSavedint" onclick=activeSaved(1)>
           <p id="saved-cnn1" class="cnn-text">0.00</p>
         </div>
         <div id="single-image-container">
@@ -192,9 +206,9 @@
     </div>
 
     <!-- SCRIPTS -->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/w3-include.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/switch.js') }}"></script>
   </div>
 
