--- a/static/css/style.css
+++ b/static/css/style.css
@@ -333,6 +333,7 @@ input[type=range]::-webkit-slider-thumb:active {
 }
 .activeSavedint {
     outline: 2px solid var(--blue-color);
+    outline: 2px solid red;
 }
 .activeSaved {
     outline: 2px solid var(--blue-color);
