--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Sketch Canvas</title>
+  <meta name="description" content="Sketch Canvas, an MIT Project">
+
   <link rel="icon" type="image/png" href="/favicon.png">
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <meta name="description" content="Sketch Canvas, an MIT Project">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-favicon.png">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:Thin,Extra-Light,Light,Regular,Medium,Semibold,Bold" rel="stylesheet" >
   <link href="https://fonts.googleapis.com/css?family=Roboto:Thin,Extra-Light,Light,Regular,Medium,Semibold,Bold" rel="stylesheet" >
-  <link rel="blank-img" href="https://i.ya-webdesign.com/images/blank-png-1.png">
+  <link rel="blank-img" href="https://i.ya-webdesign.com/images/blank-png-1.png"> 
 </head>
   
 
@@ -21,9 +21,7 @@
   </div> 
 
   <div id="nav-middle">
-    <br>
     <span onclick="optionSwitch(0)" style="cursor: pointer;" class="optionActive" id="option0-btn" > Prediction</span> 
-    <!-- <span id="option-name"> Prediction </span> -->
     <span onclick="optionSwitch(1)" style="cursor: pointer;" class="optionInactive" id="option1-btn">Interpolation </span> 
   </div> 
 
@@ -40,41 +38,31 @@
   </div> 
 </navigation>
 
-
-
+<!-- reference div for scrolling to top -->
 <div id="top"></div>
-<!-- MAIN CONTENT -->
-<body id="home" onload="init()" class="loading-cursorXXXXX">
 
+<!-- MAIN CONTENT -->
+<body onload="init()" class="">
   <div id="main-container">
-    <div id="loading-div" class="loading-div">
-      <!-- <p id="test-text">.. ...</p> -->
-    </div>
-    
-    <!-- PANELS -->
-    <!-- <div id="option0" w3-include-HTML="/static/include/prediction.html" class="invisible-template visible-template"></div>
-    <div id="option1" w3-include-HTML="/static/include/interpolation.html" class="invisible-template"></div> -->
-    
+
+    <!-- PREDICTION CONTENT -->
     <div id="option0" class="invisible-template visible-template">
       <div id="canvas-container">
-        <!-- <p>prediction template</p> -->
         <div id="canvas-box">
+            <!-- CANVAS FOR SKETCHING -->
             <canvas id="myCanvas" class="canvas" width="360" height="360"></canvas>
             <div id="button-box">
               <button class="button canvas-btn" id="predictBtn" onclick="VAEpredict(); replot(2);" onclick="VAEpredict()">Predict</button>
               <button class="button canvas-btn" id="clearBtn" onclick="erase()">Clear</button>
             </div>
         </div>
-          
         
         <div id="plot-container">
             <!-- PARALLEL PLOT COORDINATES -->    
-            <div id="plot"></div>
-            
-            <style>
-              .axis {opacity: 0.4;}
-              .axis:hover {opacity: 1;}
-            </style>
+            <div id="plot">
+              <!-- D3 ADDS CONTENT TO DIV WITH id=plot -->
+            </div>
+
             <!-- INTERACTIVE PARALLEL PLOT COORDINATES -->
             <div id="plot2">
               <input type="range" min="-2.0" max="2.0" value="0.0" step='.1' class="slider" id="slider1">
@@ -98,23 +86,26 @@
                 <p id="sliderValue9" class="slider-text">0</p>
               </div>           
             </div>
+
             <div id="button-box">
-              <button class="button slider-btn" id="clearBtn" onclick="sliderPredict()">Predict</button>
-                        
+              <button class="button slider-btn" id="clearBtn" onclick="sliderPredict()">Predict</button>                     
               <button class="button slider-btn" id="predictBtn" onclick="resetSliders()">Reset</button>
             </div>
         </div>
-          
-        
+             
         <div id="canvas-box">
+            <!-- GENERATED SKETCH SHOWS UP HERE -->
             <canvas id="predCanvas" class="canvas" width="360" height="360"></canvas>
         </div>
+
       </div>
     </div>
 
     
     <!-- INTERPOLATION PANEL -->
-    <div id="option1" class="invisible-template">    
+    <div id="option1" class="invisible-template">   
+      
+      <!-- HIDDEN CANVAS FOR MAKING MORE SKETCHES, not yet implemented -->
       <div id="slideout" style="display: none;">
         <div id="canvas-box">
           <canvas id="interpolationCanvas" class="canvas" width="360" height="360"></canvas>
@@ -123,31 +114,35 @@
             <button class="button canvas-btn" id="clearBtn" onclick="erase()">Clear</button>
           </div>
         </div>
-
       </div>
       
       <div style="text-align: center;">   
-        <div id="int-container">           
-              <img id="int0" class="saved">
-              <img id="int1" class="saved">
-              <img id="int2" class="saved">
-              <img id="int3" class="saved invisible">
-              <img id="int4" class="saved invisible">
-              <img id="int5" class="saved invisible">
-              <img id="int6" class="saved invisible">
-              <img id="int7" class="saved invisible">
-              <img id="int8" class="saved invisible">
+        <div id="int-container">         
+              <!-- INTERPOLATED IMAGES SHOW UP HERE -->
+            <img id="int0" class="saved">
+            <img id="int1" class="saved">
+            <img id="int2" class="saved">
+            <img id="int3" class="saved invisible">
+            <img id="int4" class="saved invisible">
+            <img id="int5" class="saved invisible">
+            <img id="int6" class="saved invisible">
+            <img id="int7" class="saved invisible">
+            <img id="int8" class="saved invisible">
 
-              <canvas id="transferCanvas" class="canvas int-canvas" width="72" height="72" style="display: none;"></canvas>
+            <!-- hidden canvas for transferring data to images -->
+            <canvas id="transferCanvas" class="canvas int-canvas" width="72" height="72" style="display: none;"></canvas>
         </div>
       </div>
+
       <div style="text-align: center;">   
+        <!-- INTERPOLATION CONTROLS -->
         <button class="button canvas-btn" id="interpolate-btn" onclick="interpolationRequest()">Interpolate</button><br><br>
         <input type="range" min="1" max="4" value="3" step='1' class="" id="int-slider"><br>
         <p id="intSliderValue"  style="font-weight: bold;" class="slider-text">3</p>
       </div>
     </div>
     
+    <!-- SHOWS THE SKETCHES YOU HAVE ALREADY GENERATED  -->
     <div id="images-container">
         <div id="single-image-container">
           <img id="saved0" src="/static/img/blank.png" class="saved" onclick=activeSaved(0)>
@@ -179,19 +174,18 @@
             <button class="button saving-btn" id="saveBtn" onclick="savePNG()">Clear Selected</button>
             <button class="button saving-btn" id="saveBtn" onclick="resetSaved()">Clear All</button>
             <button class="button saving-btn" id="saveBtn" onclick="savePNG()">Download Selected</button>
-        
-          </div>
-        <!-- <p id="cnn-values-test">[...]</p> -->
-
+        </div>
     </div>
 
     <!-- SCRIPTS -->
     <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/w3-include.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/switch.js') }}"></script>
   </div>
 
+
+
+<!-- OTHER CONTENT -->
   <div id="main-text">
     <!-- About Section -->
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
@@ -251,9 +245,6 @@
   <script src="https://d3js.org/d3.v4.js"></script> 
   <script src="{{ url_for('static', filename='js/parallel.js') }}"></script>
 
-
-  <script>w3.includeHTML();</script>
 </body>
-
 
 </html>
